# events

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  publish.yml
backend/: app.py  models.py  query_counter.py  schema.py
backend/__tests__/: conftest.py  test_app.py  test_schema_mutations_events.py  test_schema_mutations_friends.py  test_schema_mutations_users.py  test_schema_queries_events.py  test_schema_queries_users.py
events/: __init__.py  app.py  models.py  routes.py  utils.py
events/static/: style.css
events/templates/: _standard.html  event.html  index.html  user.html
events/templates/parts/: calendar.html  session.html  user_settings.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/components/: About.tsx  Calendar.tsx  Page.tsx  Tag.tsx
frontend/src/gql/: gql.ts  graphql.ts
frontend/src/pages/: EventList.cye.ts  EventList.module.scss  EventList.tsx  EventView.cye.tsx  EventView.tsx  index.tsx
tests/: conftest.py  data.sql  test_index.py
