[project]
name = "events"
version = "0.0.0"
authors = [
    {name = "Shish", email = "shish@shishnet.org"},
]
description = "An Event Index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-htmx",
    "icalendar",
    "bcrypt",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest-cov",
]

[tool.setuptools]
py-modules = ["events"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 20"

[tool.coverage.run]
source = ["events"]

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
/(
  | venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
files = "events"

[[tool.mypy.overrides]]
module = "flask_htmx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icalendar.*"
ignore_missing_imports = true

[tool.ruff.lint]
ignore = [
    "E712",  # sqlalchemy requires "Table.column == True"
]
